Fix spacing for first H1 and pre-header text

--- a/_sass/headings.scss
+++ b/_sass/headings.scss
@@ -29,6 +29,7 @@ h1 {
 
 h1:first-of-type {
   border-bottom: 1px solid #444;
+  margin-top: 0;
 }
 
 h2 {
