--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -69,6 +69,7 @@ li {
 #main_content {
   width: 100%;
   -webkit-font-smoothing: antialiased;
+  padding-top: 1.5rem;
 }
 
 section img {
